# python-fretboard2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
demo/: index.html  tasks.py
fretboard2/: __init__.py  _defaults.py  chord.py  compat.py  fretboard.py  utils.py
